--- a/css/styleEquipes.css
+++ b/css/styleEquipes.css
@@ -100,6 +100,43 @@ section#rankEquipe{
     transform-origin: middle;
   }
 
+  .navbar {
+    background-color: #333;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+}
+
+.navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.navbar a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.navbar a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+.navbar {
+    animation: fadeIn 1s;
+}
+
 
 @media  screen and (max-width: 600px) {
 
