--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -1,9 +1,161 @@
-ul{
-  list-style-type: none;
+:root{
+  --colorOrange: #E18517;
+  --colorBlanc: #e5e5e7;
+  --colorNoir: #090d12;
+  --colorGris: #3f4562;
+  --colorBleu: #1d2530;
+  --colorOrangeFonce: #af5f00
 }
 
-#barreNav{
-  width: 15%;
-  height: 100%;
-  background-color: aqua;
+html{
+  width: 100vw;
+  height: 100vh;
+  max-width: 100%;
+  scroll-behavior: smooth;
+}
+
+body{
+  background-color: var(--colorNoir);
+  max-width: 100%;
+  min-height: 100%;
+  color: var(--colorBlanc);
+}
+
+@media screen and (max-width: 600px) {
+  
+  header{
+    background-color: var(--colorBleu);
+    width: 100%;
+    height: 25%;
+    display: flex;
+    align-items: center;
+  }
+
+  .btn-burguer-nav{
+    cursor: pointer;
+  }
+
+  #icone-burguer, #icone-fermer{
+    font-size: 48px;
+    color: var(--colorBlanc);
+  }
+
+  #icone-fermer{
+    display: none;  
+  }
+
+  .liquidpedia{
+    width: 17%;
+    height: auto;
+    margin-left: 35%;
+  }
+
+  .nav-principale{
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0rem;
+    opacity: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transform: translateY(-100%);
+    transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out, display 0.5s ease-in-out;
+    z-index: -1;
+    background-color: var(--colorBleu);
+    font-size: 1.3rem;
+    text-align: center;
+  }
+
+  .nav-principale a {
+    text-decoration: none;
+    color: var(--colorBlanc);
+  }
+
+  .barre-nav{
+    position: relative;
+    z-index: 1;
+    width: 100%;
+    height: 4rem;
+    display: flex;
+    align-items: center;
+  }
+
+  nav ul{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    margin: 0;
+  }
+
+  nav li{
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    position: relative;
+    width: 100vw;
+    padding: 1.5rem;
+    background-color: var(--colorOrange);
+
+  }
+
+  #fleche{
+    font-size: 2rem;
+    transform: rotate(90deg);
+    transition: transform 0.2s ease-in-out;
+  }
+
+  nav li ul li{
+    padding: 1.2rem 0 1.2rem 0;
+    border-bottom: 0.2rem solid var(--colorBlanc);
+  }
+
+  nav ul ul{
+    display: flex;
+    flex-direction: column;
+    opacity: 0;
+    position: relative;
+    top: 12%;
+    height: 0;
+    background-color: var(--colorOrangeFonce);
+    transition: opacity 0.5s ease-in-out, height 0.5s ease-in-out;
+  }
+
+  nav li:hover{
+    background-color: var(--colorOrangeFonce);
+  } 
+
+  nav li:hover > ul {
+    height: auto;
+    opacity: 1;
+  }
+
+  nav li:hover > #fleche{
+    transform: rotate(0deg);
+  }
+
+  nav li > ul > li:hover{
+    background-color: var(--colorOrange);
+  }
+
+  #cc-nav{
+    display: none;
+  }
+
+  #cc-nav:checked ~ .barre-nav > .nav-principale {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+
+  #cc-nav:checked ~ .barre-nav > .btn-burguer-nav > #icone-burguer{
+    display: none;
+  }
+
+  #cc-nav:checked ~ .barre-nav > .btn-burguer-nav > #icone-fermer{
+    display: block;
+  }
 }
