--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -1,3 +1,5 @@
+@font-face { font-family: Designer; src: url('../font/DESIGNER.otf'); } 
+
 :root{
   --colorOrange: #E18517;
   --colorBlanc: #e5e5e7;
@@ -19,13 +21,14 @@ body{
   max-width: 100%;
   min-height: 100%;
   color: var(--colorBlanc);
+  font-family: Designer;
 }
 
 @media screen and (max-width: 600px) {
   
   header{
     background-color: var(--colorBleu);
-    width: 100%;
+    width: 100vw;
     height: 25%;
     display: flex;
     align-items: center;
@@ -38,6 +41,7 @@ body{
   #icone-burguer, #icone-fermer{
     font-size: 48px;
     color: var(--colorBlanc);
+    margin-left: 15%;
   }
 
   #icone-fermer{
@@ -157,5 +161,44 @@ body{
 
   #cc-nav:checked ~ .barre-nav > .btn-burguer-nav > #icone-fermer{
     display: block;
+  }
+
+  main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .imageTitre{
+    width: 60%;
+    height: auto;
+    margin-top: 15%;
+  }
+
+  .conteneurMatchs{
+    display: flex;
+    width: 100%;
+    margin-top: 15%;
+    margin-left: 10%;
+  }
+
+  .matchsFutures{
+    background-color: var(--colorBleu);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 45vw;
+    height: auto;
+  }
+
+  .matchsFutures > div{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+  }
+
+  .matchsFutures > div > img{
+    width: 50px;
+    height: 50px;
   }
 }
