--- a/css/styleEquipes.css
+++ b/css/styleEquipes.css
@@ -27,6 +27,16 @@ h1{
     color: white;
 }
 
+
+#cs2Logo{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+img#imageLogo{
+  width: 25%;
+}
+
 div.rectangle {
     display: flex;
     justify-content: center;
@@ -38,6 +48,13 @@ div.rectangle {
    
 }
 
+section#logoHeader{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -0.8rem;
+
+}
 div.rectangleE {
     display: flex;
     justify-content: center;
@@ -67,6 +84,7 @@ height: 65%;
 img#equipe{  
     display: flex;
     justify-content: center;
+    align-items: center;
     height: 75%;
     }
 
@@ -82,6 +100,14 @@ section#rankEquipe{
     align-items: center;
 }
 
+a{
+  text-decoration: none;
+  color: var(--colorBlanc);
+}
+a:hover{
+    text-decoration: none;
+    color:var(--colorNoir);
+}
 
 /* animation */
 .hoverNomEquipe {
@@ -116,8 +142,15 @@ section#rankEquipe{
         height: 25%;
         display: flex;
         align-items: center;
+        align-items: center;
       }
     
+      div.rectangle h2{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.2rem;
+    }
       .btn-burguer-nav{
         cursor: pointer;
       }
@@ -267,6 +300,13 @@ section#rankEquipe{
        background-color: #c57513;
        
     }
+    img#equipe{  
+      display: flex;
+      justify-content: center;
+      height: 30%;
+      text-align: center;
+      margin-left: 1rem;
+      }
 
     div.rectangleE{
         display: flex;
@@ -292,5 +332,11 @@ section#rankEquipe{
         letter-spacing: 0.1rem;
         font-weight: lighter;
         font-size: 1.5rem;
+    }
+
+    img#imageLogo{
+        width: 50%;
+        display: flex;
+        margin-top: 2rem;
     }
 }
