--- a/css/styleNAV-Footer.css
+++ b/css/styleNAV-Footer.css
@@ -1,5 +1,14 @@
 @font-face { font-family: Designer; src: url('../font/DESIGNER.otf'); } 
 
+:root{
+  --colorOrange: #E18517;
+  --colorBlanc: #e5e5e7;
+  --colorNoir: #090d12;
+  --colorGris: #3f4562;
+  --colorBleu: #1d2530;
+  --colorOrangeFonce: #af5f00
+}
+
 @media screen and (max-width: 600px){
 
   header{
@@ -140,5 +149,32 @@
     display: block;
   }
 
+  .footerPrincipal{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: var(--colorBleu);
+    width: 100vw;
+    height: 15vh;
+  } 
+
+  .liquidpediaFooter{
+    width: 25%;
+    height: auto;
+    padding-left: 37%;
+  }
+
+  .footerPrincipal > h3{
+    color: var(--colorOrange);
+    margin: 0.25rem;
+  }
+
+  .footerPrincipal > p{
+    margin: 0.25rem;
+  }
+
+  #reseauxSociauxHaut, #reseauxSociauxBas{
+    display: flex;
+  }
 
 }
