--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -198,5 +198,61 @@ body{
     background-color: var(--colorBlanc);
   }
 
+  .matchRegionaux{
+    width: 85vw;
+    margin-top: 10%;
+  }
+
+  .titreMatch{
+    background-color: var(--colorOrange);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+
+  .boutonsMatch{
+    display: flex;
+    justify-content: space-evenly;
+    background-color: var(--colorOrangeFonce);
+    width: 96%;
+    padding: 2%;
+  }
+
+  .boutonsMatch > button{
+    padding: 1.5%;
+    flex-grow: 1;
+  }
+
+  .matchsGeneral{
+    background-color: var(--colorBleu);
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .titreAvenir{
+    background-color: var(--colorOrange);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    margin: 0 auto;
+    height: 2.5rem;
+  }
+
+  .matchBloc{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  .matchBloc > p{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 0.9rem;
+    width: 40%;
+  }
 
 }
