--- a/css/styleNAV-Footer.css
+++ b/css/styleNAV-Footer.css
@@ -9,8 +9,6 @@
   --colorOrangeFonce: #af5f00
 }
 
-@media screen and (max-width: 600px){
-
   header{
     background-color: var(--colorBleu);
     width: 100vw;
@@ -111,7 +109,7 @@
     top: 12%;
     height: 0;
     background-color: var(--colorOrangeFonce);
-    transition: opacity 0.5s ease-in-out, height 0.5s ease-in-out;
+    transition: opacity 0.2s ease-in-out, height 0.2s ease-in-out;
   }
   
   nav li:hover{
@@ -184,56 +182,73 @@
     align-items: center;
   }
   
-}
 
-@media screen and (min-width: 601px){
+
+@media screen and (min-width: 1024px){
 
   .barre-nav{
     position: fixed;
     top: 0;
     left: 0;
     height: 100%;
-    width: 18vw;
+    width: 17vw;
     z-index: 1;
     background-color: var(--colorBleu);
     padding: 1%;
-    display: flex;
     flex-direction: column;
-    align-items: center;
   }
 
-  .barre-nav  img{
-    width: 100%;
+  .liquidpedia{
+    width: 55%;
     height: auto;
+    margin-left: 18%;
   }
 
   .nav-principale{
+    transform: translateY(0%);
+    transition: none;
+    opacity: 1;
+    z-index: 1;
+    width: 18vw;
+    background-color: transparent;
+    font-size: 1.3rem;
+  }
+
+  nav ul{
+    width: 100%;
+  }
+
+  nav li:hover > ul {
     display: flex;
-    margin-top: 55%;
-    font-size: 1.5rem;
   }
 
-  .nav-principale a {
-    text-decoration: none;
-    color: var(--colorBlanc);
-  }
-
-  .nav-principale ul{
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .nav-principale ul li{
-    padding: 10%;
-  }
-
-  .nav-principale ul li ul{
+  nav ul ul {
+    position: absolute;
+    top: 0;
+    left: 100%;
     display: none;
   }
 
+  nav li{
+    background-color: transparent;
+    width: 100%;
+    padding: 0.5rem;
+    margin: 5% 0%;
+    flex-wrap: nowrap;
+  }
 
-  #icone-burguer, #icone-fermer, #cc-nav, #fleche{
+  nav li ul{
+    width: 15vw;
+  }
+
+  nav li ul li{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+  }
+
+
+  #icone-burguer, #icone-fermer, #cc-nav{
     display: none;
   }
 }
