--- a/css/styleNAV-Footer.css
+++ b/css/styleNAV-Footer.css
@@ -9,6 +9,10 @@
   --colorOrangeFonce: #af5f00
 }
 
+  html{
+    overflow-x: hidden;
+  }
+
   header{
     background-color: var(--colorBleu);
     width: 100vw;
@@ -155,6 +159,12 @@
     margin-top: 10%;
   } 
 
+  .iconesFooter{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   .liquidpediaFooter{
     width: 25%;
     height: auto;
@@ -162,16 +172,22 @@
     margin: 1rem;
   }
 
-  .footerPrincipal > h3{
+  .footerPrincipal > .texteFooter > h3{
     color: var(--colorOrange);
     margin: 0.25rem;
   }
 
-  .footerPrincipal > p{
+  .footerPrincipal > .texteFooter > p{
     margin: 0.25rem;
   }
 
-  .footerPrincipal > div > img{
+  .texteFooter{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footerPrincipal > .iconesFooter > div > img{
     width: 10vw;
     height: auto;
     margin: 5%;
@@ -232,7 +248,7 @@
   nav li{
     background-color: transparent;
     width: 100%;
-    padding: 0.5rem;
+    padding: 1.5rem;
     margin: 5% 0%;
     flex-wrap: nowrap;
   }
@@ -251,4 +267,36 @@
   #icone-burguer, #icone-fermer, #cc-nav{
     display: none;
   }
+
+  .footerPrincipal{
+    width: 81vw;
+    margin-left: 18.8vw;
+    flex-direction: row;
+    font-size: 1.3rem;
+  }
+
+  .liquidpediaFooter{
+    width: 25%;
+    height: auto;
+    padding-left: 0%;
+    margin: 1rem;
+  }
+
+  .footerPrincipal > .iconesFooter > div > img{
+    width: 4vw;
+    height: auto;
+    margin: 5%;
+  }
+
+  .iconesFooter{
+    align-items: flex-start;
+    width: 50%;
+  }
+
+  .texteFooter{
+    align-items: flex-end;
+    margin: 1%;
+    width: 50%;
+  }
+
 }
