--- a/css/styleIndexPC.css
+++ b/css/styleIndexPC.css
@@ -4,7 +4,7 @@
     }
 
     .imageTitre{
-        width: 50%;
+        width: 40%;
         height: auto;
         margin-top: 5%;
     }
@@ -18,9 +18,22 @@
         font-size: 3.5rem;
     }
 
+    .matchsFutures > div > img{
+        width: 3.5rem;
+        height: 3.5rem;
+      }
+    
+      .matchsFutures > div > p{
+        font-size: 1.3rem;
+      }
+    
+      .matchsFutures > h4{
+        font-weight: normal;
+        font-size: 1.5rem;
+      }
 
     .matchsFutures{
-        width: 24.5%;
+        width: 35%;
     }
 
     .round{
@@ -39,12 +52,12 @@
     }
 
     .equipe > img{
-        width: 50px;
-        height: 50px;
+        width: 3.5rem;
+        height: 3.5rem;
     }
 
     .divider::before{
-        width: 15rem;
+        width: 14rem;
     }
 
     .matchSuivant > .equipe{
@@ -61,6 +74,10 @@
     .divMatchsNouvelles > section{
         width: 35vw;
         margin: 2%;
+    }
+
+    .titreNouvelles h3:first-of-type, .titreMatch h3:first-of-type, .titreTournoi h3:first-of-type{
+        font-size: 2rem;
     }
 
     main > section{
