--- a/css/stylePageEquipe.css
+++ b/css/stylePageEquipe.css
@@ -1,5 +1,5 @@
 @font-face { font-family: Designer; src: url('../font/DESIGNER.otf'); } 
-
+/* CSS MICHAEL ALI SOEU */
 :root{
   --colorOrange: #E18517;
   --colorBlanc: #e5e5e7;
